chore: Update swagger docs, schema for AI confidence scores, deprecate SbType, organize tests
